Fix copy icon ios

--- a/src/components/WalletModal/styles.module.scss
+++ b/src/components/WalletModal/styles.module.scss
@@ -24,14 +24,14 @@
   .copy {
     background: none;
     border: none;
-    margin-left: 8px;
-    padding: 4px;
-    width: 26px;
-    height: 26px;
+    margin-left: 4px;
+    padding: 0;
+    width: 18px;
+    height: 18px;
 
     .icon {
-      width: 26px;
-      height: 26px;
+      width: 18px;
+      height: 18px;
     }
   }
 
